--- a/Alarm_Project.csproj
+++ b/Alarm_Project.csproj
@@ -9,9 +9,13 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="BouncyCastle" Version="1.8.9" />
+        <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
         <PackageReference Include="Hangfire" Version="1.8.14" />
         <PackageReference Include="Hangfire.AspNetCore" Version="1.8.14" />
         <PackageReference Include="Hangfire.InMemory" Version="0.10.3" />
+        <PackageReference Include="itext7" Version="8.0.4" />
+        <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
